# attune-gui

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  REVIEW.md  build_hooks.py  pyproject.toml
.github/workflows/: lint.yml  tests.yml
.help/: features.yaml
.help/templates/attune_gui-entry/: concept.md  reference.md  task.md
.help/templates/scripts/: concept.md  reference.md  task.md
.help/templates/sidecar/: concept.md  reference.md  task.md
.help/templates/template-editor/: concept.md  reference.md  task.md
.help/templates/ui/: concept.md  reference.md  task.md
docs/specs/living-docs-regen-automation/: decisions.md
docs/specs/mcp-server-scope/: decisions.md  tasks.md
editor-frontend/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
editor-frontend/e2e/: 01-edit-and-save.spec.ts  02-conflict-resolve.spec.ts  03-rename-refactor.spec.ts  04-corpus-switch.spec.ts  05-save-modal-controls.spec.ts  06-conflict-choices.spec.ts  07-rename-edge-cases.spec.ts  08-corpus-switcher-extras.spec.ts  09-keyboard-and-advisories.spec.ts  helpers.ts
editor-frontend/src/: advisory-banner.test.ts  advisory-banner.ts  api.ts  autocomplete.test.ts  autocomplete.ts  conflict-mode.ts  corpus-switcher.test.ts  corpus-switcher.ts  diagnostics-strip.ts  diff-gutter.ts  document-model.test.ts  document-model.ts  editor.ts  frontmatter-form.ts  lint.test.ts  lint.ts  main.ts  provenance-panel.test.ts  provenance-panel.ts  rename-modal.test.ts  rename-modal.ts  save-flow.test.ts  save-flow.ts  save-modal.ts  style.css  three-way-merge.test.ts  three-way-merge.ts  ws.ts
editor-frontend/src/grammar/: markdown-extension.test.ts  markdown-extension.ts
scripts/: dev.sh  install-living-docs-hook.sh  smoke_editor_api.py
sidecar/.help/: features.yaml
sidecar/.help/templates/attune-gui/: concept.md  reference.md  task.md
sidecar/attune_gui/: __init__.py  _editor_dep.py  _fs.py  app.py  commands.py  config.py  editor_corpora.py  editor_session.py  editor_sidecar.py  errors.py  home_summary.py  jobs.py  living_docs_store.py  main.py  models.py  provenance.py  search.py  security.py  workspace.py
sidecar/attune_gui/mcp/: __init__.py  server.py  tools.py
sidecar/attune_gui/routes/: ai.py  batch.py  choices.py  cowork_files.py  cowork_health.py  cowork_pages.py  cowork_specs.py  cowork_templates.py  editor_corpus.py  editor_health.py  editor_lint.py  editor_pages.py  editor_provenance.py  editor_schema.py  editor_template.py  editor_ws.py  fs.py  help.py  jobs.py  living_docs.py  profile.py  rag.py  search.py  system.py
sidecar/attune_gui/services/: __init__.py  rag_pipeline.py  staleness_cache.py  staleness_mapping.py
sidecar/attune_gui/static/editor/: editor-BF7WxkuV.js  editor-BX1oYjtl.js  editor-Bi58upVz.css  editor-CYaEgQa5.css  editor-ClBjD01n.css  editor-DAv2iXKn.js  editor-DE5IdLw6.css  editor-DV0qb1Iw.js  editor-DWjgUsT4.css  editor-XyBdXw35.js  editor-bnzzsKJv.js  editor.css  editor.js
sidecar/attune_gui/static/editor/.vite/: manifest.json
sidecar/attune_gui/static_cw/: README.md  batch-panel.js  batch-panel.test.js  living-docs-poller.js  living-docs-poller.test.js  style.css
sidecar/attune_gui/templates/: base.html  commands.html  editor.html  health.html  home.html  jobs.html  living_docs.html  preview.html  specs.html  summaries.html  templates.html
sidecar/tests/: README.md  conftest.py  test_batch.py  test_choices.py  test_claude_hooks_behavior.py  test_claude_hooks_drift.py  test_commands.py  test_config.py  test_contract_attune_help.py  test_contract_attune_rag.py  test_cowork_files.py  test_cowork_health.py  test_cowork_pages.py  test_cowork_specs.py  test_cowork_specs_authoring.py  test_cowork_templates.py  test_editor_corpus.py  test_editor_dep.py  test_editor_pages.py  test_editor_provenance_routes.py  test_editor_schema.py  test_editor_session.py  test_editor_sidecar.py  test_editor_template.py  test_editor_template_routes.py  test_editor_ws.py  test_errors.py  test_errors_envelope.py  test_fs.py  test_home_summary.py  test_jobs.py  test_living_docs.py  test_living_docs_e2e.py  test_living_docs_inline.py  test_living_docs_store.py  test_load_dotenv.py  test_main.py  test_mcp_integration.py  test_mcp_server.py  test_mcp_tools.py  (+14 more)
sidecar/tests/_fixtures/: staleness.py
specs/archive/templates-staleness-alignment/: design.md
specs/attune-gui-improvements/: requirements.md
specs/dashboard-js-testing/: design.md  requirements.md  tasks.md
specs/living-docs-inline-actions/: design.md  requirements.md  starter-prompt.md
specs/living-docs-poller-testing/: design.md  requirements.md  tasks.md
specs/templates-staleness-alignment/: requirements.md  starter-prompt.md  tasks.md
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  api.js  index.html  styles.css
ui/src/components/: CommandsPanel.jsx  FormPanel.jsx  JobCard.jsx  JobResult.jsx  JobsPanel.jsx  LivingDocs.jsx  PathBrowser.jsx  PathField.jsx  TopBar.jsx
