[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "attune-gui"
version = "0.4.0"
description = "Local dashboard for attune-rag / attune-help / attune-author. Server-rendered Jinja2 UI (Cowork) with React UI preserved at /legacy/."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Patrick Roebuck", email = "admin@smartaimemory.com"}
]
keywords = ["attune", "gui", "developer-tools", "rag", "documentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "pydantic>=2.0,<3.0",
    "structlog>=24.0,<26.0",
    "attune-rag>=0.1.8,<0.2",
    "attune-author[ai]>=0.5.0,<0.6",
    "attune-help>=0.10.0,<1.0",
    "jinja2>=3.1,<4.0",
    "python-frontmatter>=1.1,<2.0",
    "markdown>=3.5,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10.0",
    "pytest-asyncio>=0.23,<2.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.5,<1.0",
]

[project.scripts]
attune-gui = "attune_gui.main:main"

[project.urls]
Homepage = "https://github.com/Smart-AI-Memory/attune-gui"
Repository = "https://github.com/Smart-AI-Memory/attune-gui"
Issues = "https://github.com/Smart-AI-Memory/attune-gui/issues"

[tool.hatch.build.targets.wheel]
packages = ["sidecar/attune_gui"]

[tool.hatch.build.targets.sdist]
include = [
    "sidecar/attune_gui",
    "ui/src",
    "ui/index.html",
    "ui/package.json",
    "ui/package-lock.json",
    "ui/vite.config.js",
    "scripts",
    "build_hooks.py",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "build_hooks.py"

[tool.hatch.build.targets.sdist.hooks.custom]
path = "build_hooks.py"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "S", "BLE001"]
ignore = [
    "S101",  # assert used (fine in tests)
]

[tool.pytest.ini_options]
testpaths = ["sidecar/tests"]
asyncio_mode = "auto"
