[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "attune-gui"
version = "0.9.0"
description = "Local dashboard for attune-rag / attune-help / attune-author. Server-rendered Jinja2 UI — ships clean via PyPI with no npm step."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Patrick Roebuck", email = "admin@smartaimemory.com"}
]
keywords = ["attune", "gui", "developer-tools", "rag", "documentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "pydantic>=2.0,<3.0",
    "structlog>=24.0,<26.0",
    "attune-rag>=0.1.22,<0.3",
    "attune-author[ai]>=0.23,<0.24",
    "attune-help>=0.10.0,<1.0",
    "jinja2>=3.1,<4.0",
    "python-frontmatter>=1.1,<2.0",
    "markdown>=3.5,<4.0",
    "mcp>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10.0",
    "pytest-asyncio>=0.23,<2.0",
    "pytest-cov>=5.0,<7.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.5,<1.0",
    "pre-commit>=3.5",
    "build>=1.0,<2.0",
    "twine>=5.0,<7.0",
]

[project.scripts]
attune-gui = "attune_gui.main:main"
attune-gui-mcp = "attune_gui.mcp.server:main"

[project.urls]
Homepage = "https://github.com/Smart-AI-Memory/attune-gui"
Repository = "https://github.com/Smart-AI-Memory/attune-gui"
Issues = "https://github.com/Smart-AI-Memory/attune-gui/issues"

[tool.hatch.build.targets.wheel]
packages = ["sidecar/attune_gui"]

[tool.hatch.build.targets.sdist]
include = [
    "sidecar/attune_gui",
    "sidecar/tests",
    "editor-frontend/package.json",
    "editor-frontend/tsconfig.json",
    "editor-frontend/vite.config.ts",
    "editor-frontend/eslint.config.js",
    "editor-frontend/index.html",
    "editor-frontend/src",
    "editor-frontend/README.md",
    "Makefile",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "S", "BLE001"]
ignore = [
    "S101",  # assert used (fine in tests)
]

[tool.ruff.lint.per-file-ignores]
"sidecar/tests/*" = [
    "S105",  # possible hardcoded password — fine for fake tokens in fixtures
    "S106",
]
# Dev-loop tooling, not shipped code (CI lints only sidecar/). The
# flake8-bandit (S) rules — subprocess calls, /tmp paths, urllib opens —
# are expected here and would only add noise.
"scripts/*" = ["S"]
".claude/hooks/*" = ["S"]

[tool.pytest.ini_options]
testpaths = ["sidecar/tests"]
asyncio_mode = "auto"
addopts = "-ra -m 'not e2e and not live'"
markers = [
    "e2e: end-to-end tests against a real server (Playwright); deselected by default — opt in with ``pytest -m e2e``",
    "live: opt-in tests that hit a real LLM API. Skipped by default; require ANTHROPIC_API_KEY and any test-specific env flags.",
]

[tool.coverage.run]
source = ["sidecar/attune_gui"]
branch = true
omit = ["*/tests/*", "*/conftest.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 77
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
